errorstack/tests/compile_fail/tuple_variant.stderr
error: ErrorStack derive requires named (struct) variants; found tuple variant `Failure`
 --> tests/compile_fail/tuple_variant.rs:5:5
  |
5 |     Failure(String),
  |     ^^^^^^^
